crates/jsonschema-macros/tests/ui/invalid_multiple_of_non_positive.stderr
error: 0 is less than or equal to the minimum of 0
 --> tests/ui/invalid_multiple_of_non_positive.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"multipleOf":0}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
